--- a/www/about-us.html
+++ b/www/about-us.html
@@ -83,4 +83,100 @@
                 <img src="./img/hero-img-002.jpg" srcset="./img/hero-img-002@2x.jpg 2x" alt="hero-img">
             </div>
         </section>
+
+        <section class="o-section o-section--light">
+            <div class="a-container a-container--xl">
+                <h2 class="a-title a-title--bold o-section__title o-section__title--sm">historie<span>společnosti</span></h2>
+               <div class="a-perex  a-perex--column">
+                   <p>Od svého vzniku je ryze českou rodinnou společností bez účasti zahraničního kapitálu. Hlavním podnikatelským záměrem je výroba a distribuce energií (voda, teplo, plyn, elektřina). Další část společnosti se zabývá vývojem a vstřikování plastových výlisků (pro technické účely, elektrotechniku a zdravotnictví), konstrukcí,</p>
+                   <p>výrobou forem (vstřikování plastů, vyfukování, lití hliníku,..atd.), nástrojů, jednoúčelových strojů a zařízení. V roce 2018 jsme zahájili výrobu dřevěných pelet EN Plus třídy A1 s kapacitou 100 t za měsíc.</p>
+               </div>
+            </div>
+        </section>
+
+        <div class="a-divider a-divider--light">
+            <div class="a-container">
+                <div class="a-divider__line"></div>
+            </div>
+        </div>
+
+        <section class="o-section o-section--light">
+            <div class="a-container a-container--xl">
+                <h2 class="a-title a-title--bold o-section__title o-section__title--sm">současnost<span>společnosti</span></h2>
+               <div class="a-perex  a-perex--column">
+                   <p>Naše společnost chce být dobrým a spolehlivým partnerem pro všechny naše zákazníky, proto jsme vybudovali a stále zdokonalujeme náš systém kvality, který jsme úspěšně uvedli do praxe v roce 2003. V současné době je naše společnost držitelem certifikace dle norem ISO 9001 (nástrojárna, lisovna) a ISO 13485 (lisovna plastů a montáž zdravotnického prostředku). Naší největší výhodou jsou všechny služby pod jednou střechou. </p>
+                   <p>Jsme schopni pomoci s vývojem dílu a dále pokračovat ve vlastní konstrukci forem/nástrojů, jejich výrobě v nástrojárně, až po samotnou malo/velkosériovou výrobu plastových dílů ve vlastní vstřikovně plastů, včetně finálních montáží zdravotnického prostředku. Naše výrobky nacházejí uplatnění v automobilovém, elektrotechnickém, spotřebním a zdravotnickém průmyslu.</p>
+               </div>
+               <h2 class="a-title a-title--bold mt-5">politika kvality</h2>
+               <div class="a-perex">
+                   <p>Politika kvality je součástí strategického záměru stanoveného pro dosažení špičkových technických parametrů procesu, jejich uplatnění na trzích a zajištění prosperity společnosti. Politika kvality a její hlavní cíle byla poprvé stanovena managementem dne 1.11.2006. Přezkoumána a upravena byla v roce 2018.</p>
+               </div>
+               <div class="row mt-5">
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>1</span></h3>
+                           <div class="a-perex">
+                               <p>Systém řízení kvality musí vést k neustálému zlepšování všech procesů a k udržení efektivnosti a bezpečnosti výrobků.</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>2</span></h3>
+                           <div class="a-perex">
+                               <p>Management se osobně angažuje v uplatňování požadavků předpisů týkajících se bezpečnosti a funkčnosti zdravotnických prostředků s cílem udržet efektivnost systému managementu jakosti.</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>3</span></h3>
+                           <div class="a-perex">
+                               <p>Řízení kvality je trvalým předmětem zájmu vedení společnosti a je chápáno jako jeden z nejdůležitějších nástrojů k dosažení prosperity a stability.</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>4</span></h3>
+                           <div class="a-perex">
+                               <p>Základním stavebním prvkem je rozvoj společnosti spočívající v modernizaci veškerých zdrojů (lidé a stroje).</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>5</span></h3>
+                           <div class="a-perex">
+                               <p>Každému zaměstnanci je politika kvality sdělena, vysvětlena a pochopena (školení, nástěnky).</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>6</span></h3>
+                           <div class="a-perex">
+                               <p>Nejdůležitější činností v kvalitě je obhájit SMK před zákazníkem a certifikační autoritou.</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>7</span></h3>
+                           <div class="a-perex">
+                               <p>Vytváříme takovou strategii, aby se k nám vraceli zákazníci, nikoli výrobky..</p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-md-8">
+                       <div class="m-white-box m-white-box--sm">
+                           <h3 class="a-title a-title--primary"><span>8</span></h3>
+                           <div class="a-perex">
+                               <p>Zákazník k nám přichází se svým přáním a je jedno, jestli se dostaví osobně, napíše, nebo zatelefonuje. Nikdy nás neruší a nemusí se nám přizpůsobit. Nebojujeme s ním, neboť ještě nikdo nad svým zákazníkem nezvítězil.</p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+            </div>
+        </section>
     </body>
