--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
                     </a>
                 </div>
             </div>
-            <a href="#" class="a-scroll-link">
+            <a href="#services" class="a-scroll-link">
                 skrolujte na naše služby
                 <svg width="28" height="15" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.75 15.039-.039 1.25.67.543 13.75 13.624 26.831.543l.708.707z" fill="#FFF" fill-rule="nonzero"/>
@@ -97,13 +97,13 @@
             </div>
         </section>
 
-        <section class="o-list">
+        <section class="o-list" id="services">
             <div class="o-list__row g-0">
                 <div class="o-list__col">
                     <div class="m-product-box">
                         <div class="m-product-box__body">
                             <div class="m-product-box__icon">
-                                <img src="./img/icon-zdravotnictví.png" srcset="./img/icon-zdravotnictví@2x.png 2x" alt="">
+                                <img src="./img/icon-strojírenstvi.png" srcset="./img/icon-strojírenstvi@2x.png 2x" alt="">
                             </div>
                             <div class="m-product-box__about">
                                 <h2 class="a-title m-product-box__title">Strojírenství</h2>
@@ -121,7 +121,8 @@
                             </a>
                         </div>
                         <div class="m-product-box__figure">
-                            <img src="./img/Strojirenstvi.jpg" srcset="./img/Strojirenstvi@2x.jpg 2x" alt="">
+                            <img src="./img/Strojirenstvi.jpg" srcset="./img/Strojirenstvi@2x.jpg 2x" alt="icon
+                            ">
                         </div>
                     </div>
                 </div>
@@ -129,7 +130,7 @@
                     <div class="m-product-box">
                         <div class="m-product-box__body">
                             <div class="m-product-box__icon">
-                                <img src="./img/icon-zdravotnictví.png" srcset="./img/icon-zdravotnictví@2x.png 2x" alt="">
+                                <img src="./img/icon-zdravotnictvi.png" srcset="./img/icon-zdravotnictvi@2x.png 2x" alt="">
                             </div>
                             <div class="m-product-box__about">
                                 <h2 class="a-title m-product-box__title">Zdravotnictví</h2>
@@ -181,7 +182,7 @@
                     <div class="m-product-box">
                         <div class="m-product-box__body">
                             <div class="m-product-box__icon">
-                                <img src="./img/icon-výroba.png" srcset="./img/icon-výroba@2x.png 2x" alt="">
+                                <img src="./img/icon-vyroba.png" srcset="./img/icon-vyroba@2x.png 2x" alt="">
                             </div>
                             <div class="m-product-box__about">
                                 <h2 class="a-title m-product-box__title">Výroba <br> a služby</h2>
